# NetController

./: .gitignore  .gitmodules  Acceptor.cpp  Acceptor.h  CMakeLists.txt  README.md  Session.cpp  Session.h  Utils.h  main.cpp  mmdb_text.cpp
include/spdlog/: logger-inl.h  logger.h
include/spdlog/details/: os-inl.h
libmaxminddb/: CMakeLists.txt
proxy/: Direct.cpp  Direct.h  Proxy.h  Socks5.cpp  Socks5.h  Torjan.cpp  Torjan.h
script/: iptables.sh
